# dootdoot

./: .gitignore  .oxfmtrc.json  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cut-release.yml  docs.yml  release.yml  tag-release.yml
assets/: README.md  dootdoot_asset_v1.doot  dootdoot_pos_v1.doot  source_manifest.toml
assets/affect/: README.md  arousal_signals.toml
assets/pos/: tagged_counts.tsv
docs/: README.md  bb8-expressiveness-gap-analysis.md  bb8-sound-signature-analysis.md  cross-platform-determinism.md  design.md  format_v1.md  index.md  learnability-spread.md  mathx.md  plan.md  spec.md  squash.md  style.md  usage.md
docs/.vitepress/: config.mts  mermaid-markdown.mjs  navigation.mjs  navigation.mts
docs/.vitepress/theme/: DroidPlayground.vue  Home.vue  MermaidDiagram.vue  home.css  index.ts  mermaid.css  mermaid.ts  playground.css  samples.mjs  style.css  theme.css
docs/reference/: asset_regeneration.md  cross-platform-determinism.md  dootdoot_asset_spec.md  format_v1.md  format_v2_scope.md  mathx.md  packaging.md  releasing.md  voice_v2_scope.md
docs/research/: bb8-corpus-timbre-texture-analysis.md  bb8-expressiveness-gap-analysis.md  bb8-inquisitive-chatty-gap-analysis.md  bb8-repeated-phrase-tremolo-forensics.md  bb8-sound-signature-analysis.md  bb8-sound-vocabulary-taxonomy.md  bb8-word-attack-forensics.md  droid-synth-prior-art.md  noun-verb-recognizability.md  punctuation-prosody-audibility.md  voice-v12-spike-evaluation.md
docs/validation/: format-v2-expressiveness.md  format-v3-smoothing.md  learnability-spread.md  squash.md  voice-tuning.md  voice-v10-bidirectional-whistle.md  voice-v11-natural-voice.md  voice-v12-noun-verb.md  voice-v2-expressiveness.md  voice-v3-smoothing.md  voice-v4-onset-smoothing.md  voice-v5-word-attack-smoothing.md  voice-v6-repeated-phrase-smoothing.md  voice-v7-contextual-performance.md  voice-v8-semantic-engagement.md  voice-v9-audible-punctuation.md
dootdoot/: Cargo.toml
dootdoot-core/: Cargo.toml
dootdoot-core/src/: affect.rs  archetype.rs  asset.rs  complexity.rs  engine.rs  format.rs  lib.rs  mapping.rs  mathx.rs  performance.rs  phrase.rs  pos_class.rs  pos_table.rs  sequence.rs  synth.rs  tokenizer.rs  wasm.rs  wav.rs
dootdoot-core/src/pos_class/: tests.rs
dootdoot-core/tests/: .phrase_planner.rs.pending-snap  affect_analysis.rs  affect_assets.rs  affect_prosody_integration.rs  archetype_rendering.rs  archetype_selection.rs  asset_spec_layout.rs  asset_spec_lock.rs  audio_quantization.rs  axis_squash.rs  breath_aspiration.rs  canonical_buffer.rs  class_onset_marker.rs  class_resolution.rs  complexity_analysis.rs  complexity_articulation.rs  double_run_determinism.rs  embedded_asset.rs  embedded_format.rs  event_mechanisms.rs  formant_filter.rs  format_layout.rs  format_v1_lock.rs  golden_corpus.rs  golden_hashes_fixture.rs  golden_wav.rs  golden_wav_fixtures.rs  golden_wav_hashes.rs  hesitation.rs  knob_assembly.rs  learnability_spread.rs  mapping_lookup.rs  mathx_accuracy.rs  mathx_contract.rs  mathx_exp_tanh.rs  mathx_pinned.rs  mathx_trig.rs  mouth_stage.rs  noise_breath.rs  performance_deploy.rs  (+28 more)
dootdoot-core/tests/fixtures/: golden_corpus.tsv  golden_wav_hashes.tsv
dootdoot/src/: explain.rs  input.rs  lib.rs  limits.rs  main.rs  output.rs  playback.rs
dootdoot/tests/: cli_args.rs  core_link.rs  exit_errors.rs  explain.rs  explain_classes.rs  explain_mood.rs  explain_snapshot.rs  input_limits.rs  input_resolution.rs  output_routing.rs  playback.rs
dootdoot/tests/fixtures/: explain_hello_there_question.txt  explain_mood_scenarios.txt
dootdoot/tests/snapshots/: explain_classes__mixed_sentence_class_table.snap  explain_classes__multi_subword_content_word_class_table.snap
scripts/: acoustic_metrics.py  acoustics  bb8-metrics  derive_pos_table.py  fmt  lint  package-smoke  release-smoke  sound_taxonomy.py
tests/: docs-site.test.mjs
xtask/: Cargo.toml
xtask/src/: bb8_metrics.rs  doot_asset.rs  format_artifact.rs  lib.rs  main.rs  pca_projection.rs  pos_class_table.rs  pos_source_manifest.rs  pos_table_asset.rs  run.rs  source_files.rs  source_manifest.rs  source_manifest_error.rs  source_model.rs  squash_stats.rs
xtask/tests/: bb8_metrics.rs  ci_workflow.rs  committed_assets.rs  cross_platform_determinism.rs  dependency_boundaries.rs  doot_asset.rs  format_artifact.rs  pca_projection.rs  pca_signs.rs  pos_class_table.rs  pos_snapshot_pinning.rs  pos_source_manifest.rs  release_automation.rs  source_manifest.rs  source_model.rs  squash_stats.rs
