[workspace]
members = ["dootdoot-core", "dootdoot", "xtask"]
resolver = "3"

[workspace.package]
authors = ["skeswa"]
categories = ["command-line-utilities", "multimedia::audio"]
description = "Deterministically turns text into BB-8-style droid sound."
edition = "2024"
homepage = "https://github.com/skeswa/dootdoot"
keywords = ["audio", "cli", "droid", "synthesis", "text"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skeswa/dootdoot"
rust-version = "1.92"
version = "0.2.0"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "homebrew"]
install-updater = true
install-path = "CARGO_HOME"
github-attestations = true
publish-jobs = ["homebrew"]
tap = "skeswa/homebrew-tap"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
packages = ["dootdoot"]

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = { runner = "dootdoot-macos-arm64", host = "aarch64-apple-darwin" }
x86_64-apple-darwin = { runner = "dootdoot-macos-arm64", host = "aarch64-apple-darwin" }

# Pin every GitHub Action dist emits to an immutable commit SHA (supply-chain
# hardening), so a moved tag can never silently change what release CI runs.
# Dependabot keeps these current via reviewed PRs.
[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "df4cb1c069e1874edd31b4311f1884172cec0e10"
"actions/upload-artifact" = "043fb46d1a93c77aae656e7c1c64a875d1fc6a0a"
"actions/download-artifact" = "3e5f45b2cfb9172054b4087a40e8e0b5a5461e7c"
"actions/attest" = "59d89421af93a897026c735860bf21b6eb4f7b26"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
dbg_macro = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
too_many_lines = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[profile.dist]
inherits = "release"
