[package]
name = "dootdoot-core"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# Local VOICE_V12 spike gate (T-115…T-118): enables the hard-coded noun/verb
# lexicon so the class markers and compound silhouette can be tuned by ear.
# Default-off; not a user-facing alternate voice. With this off, every word
# classifies `PosClass::Other` and rendered audio is byte-identical.
spike-noun-verb = []

[dependencies]
hound = "3.5.1"
prost = { version = "0.14.1", default-features = false, features = ["derive", "std"] }
thiserror = { version = "2.0.17", default-features = false }
tokenizers = { version = "0.21.4", default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
insta = { version = "1.48.0", default-features = false }

[lints]
workspace = true
