[package]
name = "dootdoot"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dootdoot-core = { path = "../dootdoot-core" }

[lints]
workspace = true
