[package]
name = "xtask"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["std"] }
model2vec-rs = { version = "0.2.1", default-features = false, features = [
  "fancy-regex",
  "local-only",
] }
nalgebra = { version = "0.35.0", default-features = false, features = ["std"] }
safetensors = { version = "0.5.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "0.11.0", default-features = false }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde", "std"] }

[lints]
workspace = true
